# temperature-sensor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  sketch_thermo.ino
src/temperature/: app.py  database.py  logging_config.py  loki_config.py  main.py  models.py  redis_subscriber.py
src/temperature/static/: index.html
