[project]
name = "temperature"
version = "0.1.0"
description = ""
authors = [
    {name = "Moritz Enderle",email = "contact@moritzenderle.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis (>=7.0.1,<8.0.0)",
    "fastapi (>=0.121.1,<0.122.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "uvicorn (>=0.30.0,<0.31.0)",
    "pydantic (>=2.5.0,<3.0.0)",
    "tzdata (>=2025.2,<2026.0)",
    "pytz (>=2025.2,<2026.0)"
]

[tool.poetry]
packages = [{include = "temperature", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
